# Nura-Burst

./: .gitignore  CMakeLists.txt  Makefile  output.csv
lib/: CMakeLists.txt  Network.h  csv.hpp
lib/gui/: gui.cpp  gui.hpp
lib/gui/menu/: menu.hpp
lib/gui/windows/: Cell-window.hpp  trainSettings.hpp
lib/sims/: xorTest.hpp
lib/simulation/: Cell.hpp  Network.hpp  Network_OLD.hpp  sim.cpp  sim.hpp
lib/simulation/kernels/: activation.cl  burst.cl
src/: CMakeLists.txt  main  main.c  main.cpp
